--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
    <script src="./scripts/books.js"></script>
     <script src="./script.js"></script>
@@ -11,7 +11,7 @@
 </head>
 <body onload="init()">
     <header>
-
+        
     </header>
 
     <div class="content">
