Project maybe finished

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body onload="init()">
 
     <header>
-        <img src="./img/bookstore_logo.png" alt="">
+        <a href="./index.html"><img src="./img/bookstore_logo.png" alt=""></a>
+        
     </header>
 
     <div id="content">
